[package]
name = "decap_cms_oauth"
version = "1.0.0"
edition = "2024"
authors = ["Prachya Saechua <blackb1rd.mov@gmail.com>"]
license = "MIT"
repository = "https://github.com/augustogunsch/decap-cms-oauth"
description = """
OAuth server for Decap CMS for GitHub.
"""

[dependencies]
axum = "0.8"
oauth2 = "5"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
http-body-util = "0.1.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
